--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,11 +13,17 @@ source:
 
 build:
   number: 1000
-  skip: true  # [win]
+  skip: true  # [win and vc<14]
 
 requirements:
   build:
     - {{ compiler('c') }}
+    - clangdev              # [win]
+    - lld                   # [win]
+    - m2-make               # [win]
+    - m2-automake-wrapper   # [win]
+    - m2-libtool            # [win]
+    - m2-autoconf           # [win]
   host:
 
 test:
