Use AR from env

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
   sha256: 97b5648de17645895cbd56a9a0b3e23cf01f5332c476d013ea459f1a0363cdc6
   patches:
     - minmax.patch
+    - ar.patch
 
 build:
   number: 1000
