--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,8 +9,8 @@ package:
 
 source:
   fn: {{ name }}-{{ tarversion }}.tar.gz
-  url: http://users.cecs.anu.edu.au/~bdm/nauty/nauty{{ tarversion }}.tar.gz
-  sha256: 5ed401917f641af6bf7617a18561b8f1ff5d6563268d815a054786c1ceace617
+  url: http://users.cecs.anu.edu.au/~bdm/nauty/nauty27b11.tar.gz
+  sha256: 5d52211cec767d8d8e43483d96202be235f85696d1373c307291273463c812fa
   patches:
     - minmax.patch
     - ar.patch
