No source on win

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,8 +7,7 @@ package:
   name: {{ name }}
   version: {{ version }}
 
-source:
-  fn: {{ name }}-{{ tarversion }}.tar.gz
+source:                                                                       # [not win]
   url: http://users.cecs.anu.edu.au/~bdm/nauty/nauty{{ tarversion }}.tar.gz   # [not win]
   sha256: 97b5648de17645895cbd56a9a0b3e23cf01f5332c476d013ea459f1a0363cdc6    # [not win]
   patches:              # [not win]
